# research-assitant-v2v3

./: .dockerignore  .env.example  .env.production  .env.production.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Caddyfile.prod  Dockerfile  README.md  alembic.ini  body.json  cookies.txt  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
frontend/: .eslintrc.json  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/components/: AgentRunCard.tsx  AuthProvider.tsx  EvidenceCard.tsx  HealthCard.tsx  PaymentModal.tsx  Sidebar.tsx  SidebarLayout.tsx  ThemeProvider.tsx  ui.tsx
frontend/lib/: api.ts  supabase.ts
frontend/tests/: workspace-smoke.spec.ts
migrations/: env.py
migrations/versions/: 0001_v2_v3_production_schema.py
scripts/: backup-prod.ps1  deploy-prod.ps1  restore-prod.ps1
src/ai_scientist/: _pgsql_schema.py  agents.py  ai_providers.py  auth.py  autonomous.py  billing.py  celery_app.py  clerk.py  config.py  csrf.py  email_service.py  embeddings.py  experiments.py  export.py  graph.py  hypotheses.py  ingestion.py  intelligence.py  jobs.py  main.py  migrate.py  models.py  object_storage.py  platform_db.py  postgres_store.py  rate_limit.py  rbac.py  retrieval.py  saas.py  sandbox.py  storage.py  store_factory.py
templates/experiment/: biomed_prediction.yaml  (+4 more)
tests/: test_auth_billing.py  test_research_workflow.py
(+47 files in other folders)
