[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "ai-scientist-platform"
version = "0.1.0"
description = "Citation-grounded autonomous research workspace MVP."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.5",
  "pypdf>=4.0",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "redis>=5.0",
  "celery>=5.3",
  "docker>=7.0",
  "supabase>=2.0",
  "httpx>=0.27",
  "scipy>=1.12",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-mock>=3.12",
  "anyio>=4.0",
  "ruff>=0.3",
  "mypy>=1.8",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
